# esp_matter_easy_example

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  app_main.cpp  chip_project_config.h  idf_component.yml
main/files_for_control/: final-guide-and-troubleshooting  libraries-install-guide  matter-light-project  source-codes-reference
